--- a/meeting-backend/package.json
+++ b/meeting-backend/package.json
@@ -22,7 +22,8 @@
     "mongoose": "^8.19.2",
     "passport": "^0.6.0",
     "passport-google-oauth20": "^2.0.0",
-    "express-session": "^1.17.3"
+    "express-session": "^1.17.3",
+    "socket.io": "^4.8.1"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
