Fix WebRTC video call: resolve camera display and flickering issues
- Fix remote video not displaying for participants
- Fix video flickering by optimizing stream handling and component re-renders
- Improve audio playback for remote participants
- Add stream merging logic to handle multiple tracks correctly
- Optimize RemoteVideo component with memoization and direct style updates
- Add debouncing and locking mechanisms to prevent unnecessary state updates
- Update .gitignore to exclude SSL certificates

--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,12 @@ meeting-backend/dist/
 
 # Logs
 *.log
+
+# SSL Certificates (sensitive data - do not commit)
+certs/
+*.pem
+*.key
+*.crt
+
+# Nginx config (may contain sensitive paths)
+# nginx/
